--- a/Alli-3a55.html
+++ b/Alli-3a55.html
@@ -287,8 +287,8 @@ rostrata</em>-<em>Castanopsis hystrix</em> All.</span></h2>
 <hr>
 <div id="优势种" class="section level3">
 <h3>优势种：</h3>
-<p>红锥（<em>Castanopsis hystrix</em>）和盆架树（<em>Alstonia
-pachucarpa</em>=<em>Winchia calophylla</em>）</p>
+<p>红锥（<em>Castanopsis hystrix</em>）、盆架树（<em>Alstonia
+pachucarpa</em> = <em>Winchia calophylla</em>）</p>
 <p><br></p>
 </div>
 <div id="鉴别种和主要伴生种" class="section level3">
