--- a/Alli-3a57.html
+++ b/Alli-3a57.html
@@ -304,17 +304,17 @@ multiglandulosa</em>），其中大叶楠、糙叶榕、山棕又是鉴别种。
 <h3>鉴别种和主要伴生种:</h3>
 <ul>
 <li><p>乔木层：台湾榕（<em>Ficus
-formosana</em>），南紫薇（<em>Lagerstroemia
-subcostata</em>），鹅掌柴（<em>Schefflera octophylla</em>）</p></li>
+formosana</em>）、南紫薇（<em>Lagerstroemia
+subcostata</em>）、鹅掌柴（<em>Schefflera octophylla</em>）</p></li>
 <li><p>灌木层：九节木（<em>Psychotria
-rubra</em>），台湾水东哥（<em>Saurauia tristyla</em> var.
-<em>oldhamii</em>），长梗紫麻（<em>Oreocnide
-pedunculata</em>），咬人狗（<em>Dendrocnide meyeniana</em>）</p></li>
+rubra</em>）、台湾水东哥（<em>Saurauia tristyla var.
+oldhamii</em>）、长梗紫麻（<em>Oreocnide
+pedunculata</em>）、咬人狗（<em>Dendrocnide meyeniana</em>）</p></li>
 <li><p>草本层：海芋（<em>Alocasia
 macrorrhiza</em>）、艳山姜（<em>Alpinia
 zerumbet</em>）、狭叶楼梯草（<em>Elatostema lineolatum</em> var.
 <em>majus</em>），观音座莲（<em>Angiopteris lygodiifolia</em>）</p></li>
-<li><p>藤本附生植物是：黄藤（<em>Daemonorops
+<li><p>藤本附生植物：黄藤（<em>Daemonorops
 margaritae</em>）、巢蕨（<em>Neottopteris
 nidus</em>）、石柑子（<em>Pothos chinensis</em>）、 风藤（<em>Piper
 kadsura</em>）、球兰（<em>Hoya carnosa</em>）等</p></li>
