--- a/contact.html
+++ b/contact.html
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen broad-leaved forests (常绿阔叶林)</p></a>
+      <a class="navbar-brand" href="index.html"><p style="color:darkgreen;font-weight:bold;font-size:20px">Evergreen Broad-Leaved Forests (常绿阔叶林)</p></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -300,13 +300,6 @@ University</p>
 <p>Email: <a href="mailto:ksong@des.ecnu.edu.cn"
 class="email">ksong@des.ecnu.edu.cn</a></p>
 <p><br></p>
-</div>
-<div id="prof.-yongchang-song-宋永昌" class="section level4">
-<h4>Prof. Yongchang Song (宋永昌)</h4>
-<p>School of Ecological and Environmental Sciences, East China Normal
-University</p>
-<p>Email: <a href="mailto:ycsong@des.ecnu.edu.cn"
-class="email">ycsong@des.ecnu.edu.cn</a></p>
 </div>
 </div>
 
